Vingnette compiles on miktex

--- a/pkg/vignettes/GenometriCorr.Rnw
+++ b/pkg/vignettes/GenometriCorr.Rnw
@@ -19,8 +19,8 @@
 \usepackage[font=small]{caption}
 \usepackage{color}
 \usepackage{Sweave}
-\usepackage{zi4}
 
+%\usepackage{zi4}
 %\usepackage{graphicx}
 
 \begin{document}
