--- a/pkg/vignettes/GenometriCorr.Rnw
+++ b/pkg/vignettes/GenometriCorr.Rnw
@@ -362,7 +362,7 @@ rref<-RangedData(ranges=IRanges(start=runif(population,1000000,2000000-10),width
 
 unmapped_result<-GenometriCorrelation(rquery,rref,chromosomes.length=chromo.length,ecdf.area.permut.number=pn.area,mean.distance.permut.number=pn.dist,jaccard.measure.permut.number=pn.jacc,keep.distributions=FALSE,showProgressBar=FALSE)
 
-#correlate them on the whole cromosome: 1...3 000 000
+#correlate them on the whole chromosome: 1...3 000 000
 
 map_space<-RangedData(ranges=IRanges(start=c(1000000),end=c(2000000)),space='the_chromosome')
 
