Docs are consistrnt with 1.1.15

--- a/pkg/vignettes/GenometriCorr.Rnw
+++ b/pkg/vignettes/GenometriCorr.Rnw
@@ -135,7 +135,7 @@ For each query point (contracted interval) we define the minimal distance to a r
 \subsubsection{Projection test}
 
 Another test we find useful is the projection test, which is robust when the intervals being tested cover a fairly large percentage of the length of the reference sequence. Here, we determine the number of midpoints of query intervals overlapping the reference intervals and test whether it is outside of the null expectation. The probability of a query midpoint falling into a reference interval is: 
-\[p=\displaystyle\frac{\mbox{coverage of the reference}}{\mbox{chromosome length}}\] Therefore, the distribution of the number of query points that overlap reference interval can be approximated by the binomial distribution for $\#q$ trial with success probability $p$. The null hypothesis is that query points hit the reference intervals randomly. The test is also two-sided; it provides both p-value and the direction of correlation.    
+\[p=\displaystyle\frac{\mbox{coverage of the reference}}{\mbox{chromosome length}}\] Therefore, the distribution of the number of query points that overlap reference interval can be approximated by the binomial distribution for $\#q$ trial with success probability $p$. The null hypothesis is that query points hit the reference intervals randomly. The test is also two-sided; it provides both p-value and the direction of correlation. Additionly, we estimate the size of the effect with the $\text{observed}/\text{expected}$ reatio for the number of query points that hit a reference interval.     
 
 \begin{figure*}[h!]
 	\centering\includegraphics[scale=\picscale]{png/fig9}
@@ -254,7 +254,7 @@ print(cpgi_to_genes)
 The {\tt GenometriCorrelation} function calculates the correlation statistics previously described, on each chromosome separately, and then on the genome as a whole ("awhole"). The visualization above suggested that the query and reference intervals are correlated. The resulting list is structured by the names of the chromosomes used and an additional {\tt 'awhole'} pseudochromosome. For each of them, it contains the following data:
 \begin{itemize}
 \item The very low p-value calculated in {\tt relative.distances.ks.p.value} is in accordance with the observation. {\tt relative.distances.ecdf.area.correlation} is positive, so the query and reference are in general closer to each other than we would expect if they are independent. 
-\item The {\tt projection.test.p.value} is zero, indicating either significant overlap or significant lack of overlap. {\tt projection.test.lower.tail} is {\tt FALSE}, meaning that we are in the upper tail of the distribution and there is significantly more overlap of the query and reference intervals than we would expect if they were independent. 
+\item The {\tt projection.test.p.value} is zero, indicating either significant overlap or significant lack of overlap. {\tt projection.test.lower.tail} is {\tt FALSE}, meaning that we are in the upper tail of the distribution and there is significantly more overlap of the query and reference intervals than we would expect if they were independent. {\tt projection.test.obs.to.exp} that is about 1.5 confirms it. 
 \item All three permutation tests give {\tt <0.01} meaning that the observed spatial relationships (absolute or relative distance apart) are significantly different than what is seen in the permutation distribution. 
 \item From the p-values of the permutation distributions we cannot tell whether the query and reference intervals are significantly close together or significantly far apart. As the value of the {\tt scaled.absolute.min.distance.sum.lower.tail} is {\tt TRUE}, we know that the absolute distances between query and reference are consistent and small, and, finally, the {\tt jaccard.measure.lower.tail} is {\tt FALSE}, indicating an unexpectedly high overlap, as defined by the Jaccard measure. 
 \end{itemize}
