change two.tails to double.sided

--- a/pkg/vignettes/GenometriCorr.Rnw
+++ b/pkg/vignettes/GenometriCorr.Rnw
@@ -252,24 +252,24 @@ print(cpgi_to_genes)
 The {\tt GenometriCorrelation} function calculates the correlation statistics previously described, on each chromosome separately, and then on the genome as a whole ("awhole"). The visualization above suggested that the query and reference intervals are correlated. The resulting list is structured by the names of the chromosomes used and an additional {\tt 'awhole'} pseudochromosome. For each of them, it contains the following data:
 \begin{itemize}
 \item The very low p-value calculated in {\tt relative.distances.ks.p.value} is in accordance with the observation. {\tt relative.distances.ecdf.area.correlation} is positive, so the query and reference are in general closer to each other than we would expect if they are independent. 
-\item The {\tt projection.test.p.value} is zero, indicating either significant overlap or significant lack of overlap. {\tt projection.test.direction} is {\tt 'attraction'} means that we either asked to test this alternative in the {\tt alternative} parameter set to {\tt 'attration'} (default) or that the {\tt alternative} was {\tt 'two.tails'} and see more overlap of the query and reference intervals than we would expect if they were independent. {\tt projection.test.obs.to.exp} that is about 1.5, so it is larger than 1, that is in concoradance with 'attraction'. If the  {\tt alternative} is {\tt 'two.tails'}, the p-value will be two times more than for  {\tt alternative=='attration'}.
+\item The {\tt projection.test.p.value} is zero, indicating either significant overlap or significant lack of overlap. {\tt projection.test.direction} is {\tt 'attraction'} means that we either asked to test this alternative in the {\tt alternative} parameter set to {\tt 'attration'} (default) or that the {\tt alternative} was {\tt 'double.sided'} and see more overlap of the query and reference intervals than we would expect if they were independent. {\tt projection.test.obs.to.exp} that is about 1.5, so it is larger than 1, that is in concoradance with 'attraction'. If the  {\tt alternative} is {\tt 'two.tails'}, the p-value will be two times more than for  {\tt alternative=='attration'}.
 \item All three permutation tests give {\tt <0.01} meaning that the observed spatial relationships (absolute or relative distance apart) are significantly different than what is seen in the permutation distribution. 
-\item For the p-values of the permutation distributions, we also want to know whether the query and reference intervals are significantly close together (attration) or significantly far apart (repulsion). If the alternative was stated by the  {\tt alternative} parameter ({\tt 'attraction'} (default) of {\tt repulsion}), it is passed to the {\tt direction} field in the result (namely, {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction}). If the {\tt alternative} is {\tt 'two.tails'} the values of the {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction} in the return result show the direction of the effect.
+\item For the p-values of the permutation distributions, we also want to know whether the query and reference intervals are significantly close together (attration) or significantly far apart (repulsion). If the alternative was stated by the  {\tt alternative} parameter ({\tt 'attraction'} (default) of {\tt repulsion}), it is passed to the {\tt direction} field in the result (namely, {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction}). If the {\tt alternative} is {\tt 'double.sided'} the values of the {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction} in the return result show the direction of the effect.
 \end{itemize}
-In the last run, the {\tt alternative} was the default {\tt 'attraction'} all tests indicate that the query and reference intervals are close together and/or overlapping. Let's rerun it with {\tt 'two.tails'}.
+In the last run, the {\tt alternative} was the default {\tt 'attraction'} all tests indicate that the query and reference intervals are close together and/or overlapping. Let's rerun it with {\tt 'double.sided'}.
 
-<<test_chromosome_123_two_tails,cache=TRUE>>=
+<<test_chromosome_123_double.sided,cache=TRUE>>=
 
-cpgi_to_genes_two_tails<-GenometriCorrelation(cpgis,refseq,chromosomes.to.proceed=c('chr1','chr2','chr3'),permut.number=permut.number,keep.distributions=TRUE,showProgressBar=FALSE,alternative='two.tails')
+cpgi_to_genes_double.sided<-GenometriCorrelation(cpgis,refseq,chromosomes.to.proceed=c('chr1','chr2','chr3'),permut.number=permut.number,keep.distributions=TRUE,showProgressBar=FALSE,alternative='two.tails')
 @
 
 The result is:
 
 <<report_chromosome_123_two_tail,cache=TRUE>>=
-print(cpgi_to_genes_two_tails)
+print(cpgi_to_genes_double.sided)
 @
 
-We see, that the direction is attraction. Now, it tells us real effect sign rather than just shows the alternative we asked for. The p-value now are like two time more for the two-tails alternative. 
+We see, that the direction is attraction. Now, it tells us real effect sign rather than just shows the alternative we asked for. The p-value now are like two time more for the double.sided alternative. 
 In other datasets, the values may be very different; for example, the query and reference intervals can be separated by a consistent and large distance, giving a significant absolute distance correlation with {\tt scaled.absolute.min.distance.sum.direction == 'repulsion}, and the overlap measures may or may not indicate consistent non-overlapping intervals, depending on the size of the genome and the distances involved. Thus the various tests are extremely useful as a whole, to determine the relationship between the query and reference data in a much more precise way.
 
 It is helpful to use visualization tools like those shown in Figures 6 and 7. Two types of graphical output are available for the {\tt GenometriCorrResult} class. In both cases, use the {\tt keep.distributions=TRUE } parameter in the {\tt GenometriCorrelation} call so that the object returned by the call contains the distribution data needed to report anything more than the correlation statistics. Below is an example, generated by {\tt graphical.report} function, for chromosome 1, the default (attraction) alternative.
