--- a/pkg/vignettes/GenometriCorr.Rnw
+++ b/pkg/vignettes/GenometriCorr.Rnw
@@ -251,31 +251,48 @@ print(cpgi_to_genes)
 
 The {\tt GenometriCorrelation} function calculates the correlation statistics previously described, on each chromosome separately, and then on the genome as a whole ("awhole"). The visualization above suggested that the query and reference intervals are correlated. The resulting list is structured by the names of the chromosomes used and an additional {\tt 'awhole'} pseudochromosome. For each of them, it contains the following data:
 \begin{itemize}
-\item The very low p-value calculated in {\tt relative.distances.ks.p.value} is in accordance with the observation. {\tt relative.distances.ecdf.area.correlation} is positive, so the query and reference are in general closer to each other than we would expect if they are independent. 
-\item The {\tt projection.test.p.value} is zero, indicating either significant overlap or significant lack of overlap. {\tt projection.test.direction} is {\tt 'attraction'} means that we either asked to test this alternative in the {\tt alternative} parameter set to {\tt 'attration'} (default) or that the {\tt alternative} was {\tt 'two.sided'} and see more overlap of the query and reference intervals than we would expect if they were independent. {\tt projection.test.obs.to.exp} that is about 1.5, so it is larger than 1, that is in concoradance with 'attraction'. If the  {\tt alternative} is {\tt 'two.sided'}, the p-value will be two times more than for  {\tt alternative=='attration'}.
-\item All three permutation tests give {\tt <0.01} meaning that the observed spatial relationships (absolute or relative distance apart) are significantly different than what is seen in the permutation distribution. 
-\item For the p-values of the permutation distributions, we also want to know whether the query and reference intervals are significantly close together (attration) or significantly far apart (repulsion). If the alternative was stated by the  {\tt alternative} parameter ({\tt 'attraction'} (default) of {\tt repulsion}), it is passed to the {\tt direction} field in the result (namely, {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction}). If the {\tt alternative} is {\tt 'two.sided'} the values of the {\tt jaccard.measure.test.direction} and {\tt scaled.absolute.min.distance.sum.test.direction} in the return result show the direction of the effect.
+\item The very low p-value calculated in {\tt relative.distances.ks.p.value} is in accordance with the observation. The value of 
+{\tt relative.distances.ecdf.area.correlation} is positive, so the query and reference are in general closer to each other than we would expect if they are independent. 
+\item The {\tt projection.test.p.value} is quite low, indicating either significantly more overlap than expected or overlap or significant lack of overlap. 
+\item All three permutation tests give {\tt <0.02} meaning that the observed spatial relationships (absolute or relative distance apart) are significantly different than what is seen in the permutation distribution. 
+\item As far as the the {\tt alternative} parameter was {\tt two.sides} (the default value), the p-value are two time more than we could get in one-sided test, and the call also returns the direction of the effect. The return values {\tt projection.test.direction},  {\tt jaccard.measure.test.direction}, 
+and {\tt scaled.absolute.min.distance.sum.test.direction} inform us that the effect is attraction in all three tests. In other datasets, the values may be very different; for example, the query and reference intervals can be separated by a consistent and large distance, giving a significant absolute distance correlation with {\tt scaled.absolute.min.distance.sum.direction == 'repulsion}, and the overlap measures may or may not indicate consistent non-overlapping intervals, depending on the size of the genome and the distances involved. Thus the various tests are extremely useful as a whole, to determine the relationship between the query and reference data in a much more precise way. If the direction of the alternative is stated by the  {\tt alternative} parameter ({\tt 'attraction'} or {\tt repulsion}), it is passed to the {\tt direction} fields in the result and the directions are caculated for one-sided test.
+
 \end{itemize}
-In the last run, the {\tt alternative} was the default {\tt 'attraction'} all tests indicate that the query and reference intervals are close together and/or overlapping. Let's rerun it with {\tt 'two.sided'}.
 
-<<test_chromosome_123_two.sided,cache=TRUE>>=
+Let's rerun it for the whole 3-chromosome aggregate ({\tt awhole.only=TRUE}) it with these alternatives..
 
-cpgi_to_genes_two.sided<-GenometriCorrelation(cpgis,refseq,chromosomes.to.proceed=c('chr1','chr2','chr3'),permut.number=permut.number,keep.distributions=TRUE,showProgressBar=FALSE,alternative='two.sided')
+<<test_chromosome_123_attraction,cache=TRUE>>=
+
+cpgi_to_genes_two.sided<-GenometriCorrelation(cpgis,refseq,chromosomes.to.proceed=c('chr1','chr2','chr3'),awhole.only=TRUE, permut.number=permut.number,keep.distributions=TRUE,showProgressBar=FALSE,alternative='attraction')
 @
 
-The result is:
+The result for attration is:
 
-<<report_chromosome_123_two.sided,cache=TRUE>>=
+<<report_chromosome_123_attraction,cache=TRUE>>=
 print(cpgi_to_genes_two.sided)
 @
 
-We see, that the direction is attraction. Now, it tells us real effect sign rather than just shows the alternative we asked for. The p-value now are like two time more for the two.sided alternative. 
-In other datasets, the values may be very different; for example, the query and reference intervals can be separated by a consistent and large distance, giving a significant absolute distance correlation with {\tt scaled.absolute.min.distance.sum.direction == 'repulsion}, and the overlap measures may or may not indicate consistent non-overlapping intervals, depending on the size of the genome and the distances involved. Thus the various tests are extremely useful as a whole, to determine the relationship between the query and reference data in a much more precise way.
+<<test_chromosome_123_repulsion,cache=TRUE>>=
+
+cpgi_to_genes_two.sided<-GenometriCorrelation(cpgis,refseq,chromosomes.to.proceed=c('chr1','chr2','chr3'),awhole.only=TRUE, permut.number=permut.number,keep.distributions=TRUE,showProgressBar=FALSE,alternative='repulsion')
+@
+
+The result for repulsion is:
+
+<<report_chromosome_123_repulsion,cache=TRUE>>=
+print(cpgi_to_genes_two.sided)
+@
 
 It is helpful to use visualization tools like those shown in Figures 6 and 7. Two types of graphical output are available for the {\tt GenometriCorrResult} class. In both cases, use the {\tt keep.distributions=TRUE } parameter in the {\tt GenometriCorrelation} call so that the object returned by the call contains the distribution data needed to report anything more than the correlation statistics. Below is an example, generated by {\tt graphical.report} function, for chromosome 1, the default (attraction) alternative.
 
+is {\tt 'attraction'} means that we either asked to test this alternative in the {\tt alternative} parameter set to {\tt 'attration'} (default) or that the {\tt alternative} was {\tt 'two.sided'} and see more overlap of the query and reference intervals than we would expect if they were independent. {\tt projection.test.obs.to.exp} that is about 1.5, so it is larger than 1, that is in concoradance with 'attraction'. If the  {\tt alternative} is {\tt 'two.sided'}, the p-value will be two times more than for  {\tt alternative=='attration'}.
+
 <<chromosome_1_graphical_report,results=hide>>=
-graphical.report(cpgi_to_genes,pdffile="CpGi_to_RefSeq_chr1_picture.pdf",show.chromosomes=c('chr1'),show.all=FALSE)
+graphical.report(cpgi_to_genes,
+				pdffile="CpGi_to_RefSeq_chr1_picture.pdf",
+				show.chromosomes=c('chr1'),show.all=FALSE
+)
 @
 
 \begin{figure*}
@@ -286,7 +303,10 @@ graphical.report(cpgi_to_genes,pdffile="CpGi_to_RefSeq_chr1_picture.pdf",show.ch
 Another graphical display is available. The {\tt visualize} function has the same parameters as {\tt graphical.report} and also requires that the initial function be run with {\tt keep.distributions=TRUE}. An example for chromosome 1 follows.
 
 <<chromosome_1_visualize,results=hide>>=
-visualize(cpgi_to_genes,pdffile="CpGi_to_RefSeq_chr1_picture_vis.pdf",show.chromosomes=c('chr1'),show.all=FALSE)
+visualize(cpgi_to_genes,
+			pdffile="CpGi_to_RefSeq_chr1_picture_vis.pdf",
+			show.chromosomes=c('chr1'),show.all=FALSE
+)
 @
 
 \begin{figure*}
