--- a/pkg/README
+++ b/pkg/README
@@ -149,5 +149,5 @@ the main function works only with GRanges,
 the wacky IRanges backdoor is removed
 We have working mapping, thanks to Veronica Busa
 1.1.24
-the alternatives (attration, repulsion, two.tails) are rewritten
+the alternatives (attraction, repulsion, two.sided) are rewritten
 Thanks to Vera Mukhina
